--- a/build.gradle
+++ b/build.gradle
@@ -32,6 +32,7 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-data-mongodb'
 	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
+	implementation 'org.slf4j:slf4j-api:1.7.25'
 	runtimeOnly 'org.springframework.boot:spring-boot-devtools'
 	implementation 'org.webjars:bootstrap:3.3.7-1'
 	compileOnly 'org.projectlombok:lombok'
