--- a/build.gradle
+++ b/build.gradle
@@ -39,8 +39,15 @@ dependencies {
 	annotationProcessor 'org.projectlombok:lombok'
 	testAnnotationProcessor 'org.projectlombok:lombok'
 	testCompileOnly 'org.projectlombok:lombok'
-	testCompileOnly 'org.springframework.boot:spring-boot-starter-test'
+	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+//	testImplementation 'org.junit.platform:junit-platform-commons:1.5.2'
+	testImplementation 'org.junit.jupiter:junit-jupiter-api:5.6.2'
+	testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.6.2'
 }
+
+//test {
+//	useJUnitPlatform()
+//}
 
 //export test coverage
 jacocoTestReport {
