--- a/build.gradle
+++ b/build.gradle
@@ -43,6 +43,8 @@ dependencies {
 //	testImplementation 'org.junit.platform:junit-platform-commons:1.5.2'
 	testImplementation 'org.junit.jupiter:junit-jupiter-api:5.6.2'
 	testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.6.2'
+	testImplementation 'de.flapdoodle.embed:de.flapdoodle.embed.mongo'
+	implementation group: 'cz.jirutka.spring', name: 'embedmongo-spring', version: '1.3.1'
 }
 
 //test {
