--- a/build.gradle
+++ b/build.gradle
@@ -32,9 +32,11 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-data-mongodb'
 	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
+	implementation 'org.springframework.boot:spring-boot-starter-data-mongodb-reactive'
 	implementation 'org.slf4j:slf4j-api:1.7.25'
-	runtimeOnly 'org.springframework.boot:spring-boot-devtools'
 	implementation 'org.webjars:bootstrap:3.3.7-1'
+//	implementation 'org.springframework.boot:spring-boot-starter-webflux'
+	runtimeOnly 'org.springframework.boot:spring-boot-devtools'
 	compileOnly 'org.projectlombok:lombok'
 	annotationProcessor 'org.projectlombok:lombok'
 	testAnnotationProcessor 'org.projectlombok:lombok'
@@ -45,6 +47,10 @@ dependencies {
 	testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.6.2'
 	testImplementation 'de.flapdoodle.embed:de.flapdoodle.embed.mongo'
 	implementation group: 'cz.jirutka.spring', name: 'embedmongo-spring', version: '1.3.1'
+
+	// https://mvnrepository.com/artifact/io.projectreactor/reactor-test
+	testImplementation 'io.projectreactor:reactor-test:3.1.0.RELEASE'
+
 }
 
 //test {
