--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,6 @@
 buildscript {
 	ext {
-		springBootVersion = '2.0.0.M3'
+		springBootVersion = '2.1.0.M3'
 	}
 	repositories {
 		mavenCentral()
@@ -31,25 +31,23 @@ repositories {
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-data-mongodb'
 	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
-	implementation 'org.springframework.boot:spring-boot-starter-web'
-	implementation 'org.springframework.boot:spring-boot-starter-data-mongodb-reactive'
-	implementation 'org.slf4j:slf4j-api:1.7.25'
-	implementation 'org.webjars:bootstrap:3.3.7-1'
-//	implementation 'org.springframework.boot:spring-boot-starter-webflux'
+//	implementation 'org.springframework.boot:spring-boot-starter-web'
+	implementation('org.springframework.boot:spring-boot-starter-webflux')
 	runtimeOnly 'org.springframework.boot:spring-boot-devtools'
+	testImplementation 'de.flapdoodle.embed:de.flapdoodle.embed.mongo'
+	implementation 'org.springframework.boot:spring-boot-starter-data-mongodb-reactive'
+	implementation group: 'cz.jirutka.spring', name: 'embedmongo-spring', version: '1.3.1'
+	implementation 'org.webjars:bootstrap:3.3.7-1'
+	implementation 'org.slf4j:slf4j-api:1.7.25'
 	compileOnly 'org.projectlombok:lombok'
 	annotationProcessor 'org.projectlombok:lombok'
 	testAnnotationProcessor 'org.projectlombok:lombok'
 	testCompileOnly 'org.projectlombok:lombok'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
-//	testImplementation 'org.junit.platform:junit-platform-commons:1.5.2'
-	testImplementation 'org.junit.jupiter:junit-jupiter-api:5.6.2'
-	testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.6.2'
-	testImplementation 'de.flapdoodle.embed:de.flapdoodle.embed.mongo'
-	implementation group: 'cz.jirutka.spring', name: 'embedmongo-spring', version: '1.3.1'
-
-	// https://mvnrepository.com/artifact/io.projectreactor/reactor-test
 	testImplementation 'io.projectreactor:reactor-test:3.1.0.RELEASE'
+//	testImplementation 'org.junit.platform:junit-platform-commons:1.5.2'
+//	testImplementation 'org.junit.jupiter:junit-jupiter-api:5.6.2'
+//	testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.6.2'
 
 }
 
